--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,7 +11,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url('/assets/wallpaper.png');
+  background-image: url('/assets/wall.png');
   background-position: center;
   background-size: cover;
   font-family: 'Poppins', sans-serif;
